Limpeza de anotações lixo.